<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2017 The OmniROM Project

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 2 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="app_name">Events</string>
    <string name="event_service_settings_title">Events</string>
    <string name="category_media_player_title">Media player</string>
    <string name="bt_a2dp_connect_app_list_title">Bluetooth A2DP connect</string>
    <string name="headset_connect_app_list_title">Wired headset connect</string>
    <string name="event_service_enabled_title">Enable event service</string>
    <string name="event_service_running">Service is running</string>
    <string name="event_service_stopped">Service is not running</string>
    <string name="category_media_player_info_title">App selection</string>
    <string name="media_player_autostart_title">Send media play event after start</string>
    <string name="media_player_music_active_title">Do not start event on playback</string>
    <string name="autorun_single_app_title">Autorun single app</string>
    <string name="autorun_single_app_summary">Don\'t show app selection dialog</string>
    <string name="bt_a2dp_connect_app_list_summary">Apps to be listed when an A2DP event is triggered, such as connecting a Bluetooth headset</string>
    <string name="headset_connect_app_list_summary">Apps to be listed when a wired headset is connected</string>
    <string name="app_chooser_left">Left</string>
    <string name="app_chooser_right">Right</string>
    <string name="app_chooser_timeout_title">App chooser dialog timeout</string>
    <string name="app_chooser_position_title">App chooser dialog position</string>
    <string name="wired_events_threshold_title">Wired headset event threshold</string>
    <string name="wired_events_threshold_summary">Ignore headset events if they are within threshold time</string>
    <string name="category_wifi_title">Wi\u2011Fi</string>
    <string name="disable_wifi_threshold_title">Turn off Wi\u2011Fi automatically</string>
    <string name="disable_wifi_threshold_summary">Deactivate Wi\u2011Fi if not connected to a network after a few minutes</string>
    <string name="tagged_networks_summary">%1$d networks tagged</string>
    <string name="home_networks_title">Home network</string>
    <string name="tagged_networks_title">Tagged networks</string>
    <string name="home_network_events_summary">Home network events</string>
    <string name="home_connect_actions_title">When connect to Home</string>
    <string name="omni_actions_summary">%1$d actions selected</string>
    <string name="home_disconnect_actions_title">When disconnect from Home</string>
    <string name="work_networks_title">Work network</string>
    <string name="work_network_events_summary">Work network events</string>
    <string name="work_connect_actions_title">When connect to Work</string>
    <string name="work_disconnect_actions_title">When disconnect from Work</string>
    <string name="unit_minutes">min</string>
    <string name="unit_sec">sec</string>
    <string name="category_app_chooser_title">Application chooser</string>

    <!-- Omni actions -->
    <string name="action_location_off_title">Location off</string>
    <string name="action_location_sensors_only_title">Location sensors only</string>
    <string name="action_location_battery_saving_title">Location battery saving</string>
    <string name="action_location_high_accuracy_title">Location high accuracy</string>
    <string name="action_dnd_off_title">DND off</string>

</resources>
