<?xml version="1.0" encoding="utf-8"?>

<!--  Copyright (C) 2018 The OmniROM Project

  This program is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 2 of the License, or
  (at your option) any later version.

  This program is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res-auto"
    android:key="event_service_settings"
    android:title="@string/event_service_settings_title">

    <android.support.v14.preference.SwitchPreference
        android:key="event_service_enabled"
        android:persistent="false"
        android:title="@string/event_service_enabled_title" />

    <android.support.v7.preference.PreferenceCategory
        android:key="category_media_player"
        android:title="@string/category_media_player_title">

        <org.omnirom.omnilib.preference.AppMultiSelectListPreference
            android:dependency="event_service_enabled"
            android:icon="@drawable/ic_settings_bluetooth"
            android:key="bt_a2dp_connect_app_string"
            android:persistent="false"
            android:summary="@string/bt_a2dp_connect_app_list_summary"
            android:title="@string/bt_a2dp_connect_app_list_title" />

        <org.omnirom.omnilib.preference.ScrollAppsViewPreference
            android:dependency="event_service_enabled"
            android:key="a2dp_app_list"
            android:persistent="false"
            android:selectable="false" />

        <org.omnirom.omnilib.preference.AppMultiSelectListPreference
            android:dependency="event_service_enabled"
            android:icon="@drawable/ic_headset_24dp"
            android:key="headset_connect_app_string"
            android:persistent="false"
            android:summary="@string/headset_connect_app_list_summary"
            android:title="@string/headset_connect_app_list_title" />

        <org.omnirom.omnilib.preference.ScrollAppsViewPreference
            android:dependency="event_service_enabled"
            android:key="headset_app_list"
            android:persistent="false"
            android:selectable="false" />

        <android.support.v14.preference.SwitchPreference
            android:defaultValue="true"
            android:dependency="event_service_enabled"
            android:key="autorun_single_app"
            android:persistent="false"
            android:summary="@string/autorun_single_app_summary"
            android:title="@string/autorun_single_app_title" />

        <android.support.v14.preference.SwitchPreference
            android:defaultValue="true"
            android:dependency="event_service_enabled"
            android:key="media_player_music_active"
            android:persistent="false"
            android:title="@string/media_player_music_active_title" />

        <android.support.v14.preference.SwitchPreference
            android:dependency="event_service_enabled"
            android:key="media_player_autostart"
            android:persistent="false"
            android:title="@string/media_player_autostart_title" />

        <org.omnirom.omnilib.preference.SeekBarPreference
            android:dependency="event_service_enabled"
            android:key="app_chooser_timeout"
            android:max="60"
            android:persistent="false"
            android:title="@string/app_chooser_timeout_title"
            settings:min="0"
            settings:unitsRight="@string/unit_sec" />

        <android.support.v7.preference.ListPreference
            android:dependency="event_service_enabled"
            android:entries="@array/app_chooser_position_entries"
            android:entryValues="@array/app_chooser_position_values"
            android:key="app_chooser_position"
            android:persistent="false"
            android:title="@string/app_chooser_position_title" />

        <org.omnirom.omnilib.preference.SeekBarPreference
            android:dependency="event_service_enabled"
            android:key="wired_events_threshold"
            android:max="6"
            android:persistent="false"
            android:summary="@string/wired_events_threshold_summary"
            android:title="@string/wired_events_threshold_title"
            settings:min="0"
            settings:unitsRight="@string/unit_sec" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:key="category_network"
        android:title="@string/category_wifi_title">

        <android.support.v7.preference.Preference
            android:dependency="event_service_enabled"
            android:fragment="org.omnirom.omnibrain.HomeNetworkEventsSettings"
            android:icon="@drawable/ic_settings_home"
            android:key="home_network_events"
            android:summary="@string/home_network_events_summary"
            android:title="@string/home_networks_title" />

        <android.support.v7.preference.Preference
            android:dependency="event_service_enabled"
            android:fragment="org.omnirom.omnibrain.WorkNetworkEventsSettings"
            android:icon="@drawable/ic_work_24dp"
            android:key="work_network_events"
            android:summary="@string/work_network_events_summary"
            android:title="@string/work_networks_title" />

        <org.omnirom.omnilib.preference.SeekBarPreference
            android:dependency="event_service_enabled"
            android:icon="@drawable/ic_settings_wireless"
            android:key="disable_wifi_threshold"
            android:max="10"
            android:persistent="false"
            android:summary="@string/disable_wifi_threshold_summary"
            android:title="@string/disable_wifi_threshold_title"
            settings:min="0"
            settings:unitsRight="@string/unit_minutes" />
    </android.support.v7.preference.PreferenceCategory>
</android.support.v7.preference.PreferenceScreen>
